# weather_python

./: README.md  data_analysis.ipynb  exploratory_data_analysis.ipynb  functions.py  pyproject.toml
data/: geo_data.csv  precipitation_97016.csv  precipitation_97218.csv  temperature_chicago_ord.csv  temperature_tampa_tpa.csv
data/phzm_us_zones_shp_2023/: phzm_us_zones_shp_2023.dbf  phzm_us_zones_shp_2023.sbn  phzm_us_zones_shp_2023.sbx  phzm_us_zones_shp_2023.shx  phzm_us_zones_shp_2023.xml
data/temperature/: temperature_97016.csv  temperature_97218.csv  temperature_aberdeen.csv  temperature_finley_wildlife_refuge.csv
notebooks/: compare_temperature.ipynb  exploratory_data_analysis.ipynb  temperature.ipynb  temperature_nonideal.ipynb
notebooks/ad_hoc/: temperature_august.ipynb
